--- a/css/estilos-gral.css
+++ b/css/estilos-gral.css
@@ -10,16 +10,21 @@
 
  :root {
      --color-principal: rgb(61, 61, 61);
-     --color-secundario: rgb(204, 204, 204);
-     --acento: rgb(88, 179, 249);
+     --color-secundario: rgb(241, 210, 143);
+     --acento: rgb(246, 152, 53);
      --transparencia: rgba(61, 61, 61, 0.8);
+   
  }
 
+ body {
+    /* background: var(--color-secundario); */
+ }
 
  h1.titulo {
      text-align: center;
      margin-bottom: 20px;
      margin-top: 70px;
+     font-size: 1.5em;
  }
 
  .texto {
