--- a/css/menu.css
+++ b/css/menu.css
@@ -12,6 +12,16 @@ header {
 
 }
 
+header .logo {
+    display: flex;
+}
+
+header img {
+    height: 35px;
+    margin-right: 5px;
+
+}
+
 header .usuario a {
     padding: 10px;
     color: var(--color-principal);
@@ -32,7 +42,7 @@ header p {
 nav {
     width: 100%;
     position: absolute;
-    top: 75px;
+    top: 78px;
     z-index: 3000;
     display: flex;
     flex-direction: column;
@@ -105,7 +115,9 @@ nav #open-menu:checked ~ .link{
 
 .formBuscar input {
     background: transparent;
+    padding: 8px;
     border: 0;
+    outline: none;
     width: 250px;
  
 }
@@ -116,6 +128,9 @@ header .formBuscar{
 
 @media screen and (min-width: 768px) {
     /* breakpoint para tablet */
+    nav {
+        top: 83px;
+    }
 
     nav label {
         display: none;
@@ -132,6 +147,14 @@ header .formBuscar{
         border-top: 0;
         margin: 5px;
     }
+
+    nav .link a:hover{
+        color: var(--acento)
+     }
+ 
+     nav .link a:hover i {
+         color: var(--color-secundario);
+     }
 
     header .formBuscar{
         display: block;
