--- a/css/estilos-gral.css
+++ b/css/estilos-gral.css
@@ -12,12 +12,8 @@
      --color-principal: rgb(61, 61, 61);
      --color-secundario: rgb(241, 210, 143);
      --acento: rgb(246, 152, 53);
-     --transparencia: rgba(61, 61, 61, 0.8);
+     --transparencia: rgba(61, 61, 61, 0.9);
    
- }
-
- body {
-    /* background: var(--color-secundario); */
  }
 
  h1.titulo {
@@ -30,15 +26,14 @@
  .texto {
      font-size: 1em;
      margin: 10px 0;
-     text-indent: 15px;
+
  }
 
  main {
     width: 95%;
     margin: auto;
-    max-width: 1000px;
     padding: 10px;
-    height: 80vh;
+    height: 70vh;
  }
 
 
@@ -48,9 +43,9 @@
  }
 
  @media screen and (min-width: 1024px) {
-
      /* breakpoint para pc */
-     /* main.container {
+     
+     main {
          max-width: 1000px;
-     } */
+     }
  }
