--- a/css/footer.css
+++ b/css/footer.css
@@ -1,5 +1,7 @@
  /* first mobil */
 footer {
+    position: fixed;
+    bottom: 0;
     width: 100%;
     margin-top: 20px;
     background-color: var(--color-principal);
