--- a/css/estilos-gral.css
+++ b/css/estilos-gral.css
@@ -13,11 +13,35 @@
      --color-secundario: rgb(241, 210, 143);
      --acento: rgb(246, 152, 53);
      --transparencia: rgba(61, 61, 61, 0.9);
-     --grises:  rgb(139, 138, 138);
-   
+     --grises: rgb(139, 138, 138);
+
  }
 
+ /*Maquetacion general con grid*/
+ .container {
+     display: grid;
+     grid-template-rows: repeat(4, auto);
+     grid-template-columns: 1fr;
+     grid-template-areas: "header" "nav" "main" "footer";
+ }
 
+ header {
+     grid-area: header;
+ }
+
+ nav {
+     grid-area: nav;
+ }
+
+ main {
+     grid-area: main;
+ }
+
+ footer {
+     grid-area: footer;
+ }
+
+ 
  h1.titulo {
      text-align: center;
      margin-bottom: 20px;
@@ -33,9 +57,9 @@
  }
 
  main {
-    width: 95%;
-    margin: auto;
-    padding: 10px;
+     width: 95%;
+     margin: auto;
+     padding: 10px;
  }
 
 
@@ -50,8 +74,8 @@
 
  @media screen and (min-width: 1024px) {
      /* breakpoint para pc */
-     
-  
+
+
      main {
          max-width: 1000px;
      }
