--- a/css/menu.css
+++ b/css/menu.css
@@ -48,6 +48,7 @@ nav {
 }
 
 nav label {
+    width: 100%;
     background-color: var(--color-principal);
     color: var(--color-secundario);
     padding: 8px 15px;
@@ -118,7 +119,8 @@ nav #open-menu:checked ~ .link{
     padding: 8px;
     border: 0;
     outline: none;
-    width: 250px;
+    min-width: 200px;
+    max-width: 250px;
     font-size: 1.2em;
  
 }
