--- a/css/administracion.css
+++ b/css/administracion.css
@@ -6,7 +6,7 @@
 }
 
 #AgregarProd, #EditarProd {
-    width: 48%;
+    width: 100%;
 }
 
 @media screen and (min-width: 768px) {
@@ -17,5 +17,10 @@
         justify-content: space-between;
 
     }
+
+    #AgregarProd, #EditarProd {
+        width: 48%;
+    }
+    
 
 }
