--- a/css/cards.css
+++ b/css/cards.css
@@ -1,3 +1,4 @@
+ 
  /* first mobil */
 .productos {
     width: 100%;
@@ -23,6 +24,12 @@
     border-radius: 5px 5px 0 0 ;
     margin-bottom: 10px;
 
+}
+
+.card .titProd {
+    font-family: "Roboto Condensed", sans-serif;;
+    font-weight: bold;
+    margin-bottom: 10px;
 }
 
 .card .descripcion {
