--- a/css/cards2.css
+++ b/css/cards2.css
@@ -25,6 +25,12 @@
 
 }
 
+.card .titProd {
+    font-family: "Roboto Condensed", sans-serif;;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
 .card .descripcion {
     font-size: 1em;
 }
