--- a/css/cards.css
+++ b/css/cards.css
@@ -91,10 +91,12 @@
 }
 
 .agregar button {
-    padding: 10px;
+    padding: 8px;
+    margin: 3px;
     background: var(--acento);
     border: 0;
-    border-radius: 3px
+    border-radius: 3px;
+    font-size: 1em;
 }
 
 .card .agregar button i{
