--- a/css/formularios.css
+++ b/css/formularios.css
@@ -1,6 +1,6 @@
 .formularios {
     width: 100%;
-    /* min-width: 340px; */
+    min-width: 340px;
     max-width: 450px;
     margin: 10px auto;
     padding: 15px;
