--- a/css/carrito.css
+++ b/css/carrito.css
@@ -63,5 +63,5 @@
     border-radius: 5px;
     background: var(--acento);
     color: var(--color-principal);
-    font-weight: bolder;
+    font-size: 1.1em;
 }
