--- a/css/cards.css
+++ b/css/cards.css
@@ -20,9 +20,13 @@
 }
 
 .card img {
-    width: 100%;
+    /* width: 100%; */
+    max-height: 150px;
+   max-width: 200px;
+    display: block;
+ margin: 10px auto;
     border-radius: 5px 5px 0 0 ;
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
 
 }
 
@@ -34,6 +38,8 @@
 
 .card .descripcion {
     font-size: 1em;
+    max-width: 200px;
+   
 }
 
 .card .resenias {
